--- a/package.json
+++ b/package.json
@@ -14,27 +14,27 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/core": "^7.6.2",
-    "@babel/preset-env": "^7.6.2",
-    "@babel/register": "^7.6.2",
-    "bluebird": "^3.5.5",
+    "@babel/core": "^7.9.0",
+    "@babel/preset-env": "^7.9.0",
+    "@babel/register": "^7.9.0",
+    "bluebird": "^3.7.2",
     "connect-redis": "^3.4.2",
-    "dotenv": "^8.1.0",
-    "express": "^4.16.3",
-    "express-session": "^1.16.2",
-    "http-proxy-middleware": "^0.18.0",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "express-session": "^1.17.0",
+    "http-proxy-middleware": "^0.21.0",
     "isomorphic-unfetch": "^2.1.1",
-    "next": "7.0.2",
-    "passport": "^0.4.0",
+    "next": "^9.3.2",
+    "passport": "^0.4.1",
     "passport-oauth2": "^1.5.0",
-    "react": "16.4.2",
-    "react-dom": "16.4.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "redis": "^2.8.0",
-    "request": "^2.88.0",
-    "request-promise-native": "^1.0.7",
+    "request": "^2.88.2",
+    "request-promise-native": "^1.0.8",
     "resumablejs": "^1.1.0",
-    "scroll-into-view": "^1.9.3",
-    "semantic-ui-react": "0.83.0"
+    "scroll-into-view": "^1.14.2",
+    "semantic-ui-react": "^0.88.2"
   },
   "devDependencies": {}
 }
